--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -39,14 +39,14 @@
 
   --rainbow-1: #e879f9;
   --rainbow-2: #936df9;
-  --rainbow-3: #4989c6;
+  --rainbow-3: #59abf7;
   --rainbow-4: #5eddac;
   --rainbow-5: #f6cd5d;
 
   --orange: #ff7e22;
   --yellow: #fca62a;
   --pink: #e77cc7;
-  --purple: #623ac6;
+  --purple: #673ece;
   --indigo: #5a43f1;
   --indigo-dark: #4509cf;
   --indigo-light: #969bf6;
